# smart_mailbox

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  build.bat  build.py  build.sh  build_config.py  build_cross_platform.py  build_windows.py  main.py  pyproject.toml
.cursor/rules/: development-guidelines.mdc  project-overview.mdc  project-spec.mdc  storage-strategy.mdc
.github/workflows/: build.yml
src/smart_mailbox/: __init__.py  main.py
src/smart_mailbox/ai/: __init__.py  ollama_client.py  reply_gen.py  tagger.py
src/smart_mailbox/config/: __init__.py  ai.py  logger.py  tags.py
src/smart_mailbox/email/: __init__.py  parser.py
src/smart_mailbox/email_parser/: __init__.py
src/smart_mailbox/gui/: __init__.py  email_view.py  main_window.py  settings.py  sidebar.py  update_dialog.py
src/smart_mailbox/storage/: __init__.py  database.py  file_manager.py  json_storage.py  models.py
src/smart_mailbox/utils/: __init__.py  update_checker.py  version_manager.py
