[project]
name = "smart-mailbox"
version = "0.1.1"
description = "사용자가 .eml 이메일 파일을 드래그 앤 드롭으로 넣으면, LLM을 통해 자동 태깅 및 회신이 필요한 경우 AI가 답장을 생성해주는 스마트 메일 분석 도구입니다."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # AI/LLM 라이브러리
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.30",
    # 이메일 처리
    "email-validator>=2.1.0",
    "chardet>=5.2.0",
    # GUI 프레임워크
    "PyQt6>=6.4.0",
    "PyQt6-tools>=6.4.0",
    # Ollama 연결용
    "ollama>=0.5.1",
    # 유틸리티
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    # 암호화
    "cryptography>=41.0.0",
    "pyqtdarktheme>=2.1.0",
    "pathvalidate>=3.0.0",
    "pyinstaller>=6.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "isort>=5.0",
]

build = [
    "pyinstaller>=6.3.0",
    "cx-freeze>=6.15.0",
    "auto-py-to-exe>=2.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
smart-mailbox = "smart_mailbox.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
